k8s/apps/auth-service/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingressroute
  labels:
    app: auth
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`viscord.test`) && PathPrefix(`/api/auth`)
      services:
        - name: auth-service
          port: 3000
      # middlewares:
      #   - name: strip-api-prefix
